--- a/css/expert/style.css
+++ b/css/expert/style.css
@@ -39,11 +39,11 @@ Typography Used:
 }
 body {
     background-color: #c1ae9f;
-    font-family: 'lato-regular', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 16px;
 }
 h1, h2, h3, h4{
-    font-family: 'playfair-display';
+    font-family: 'Playfair Display';
     line-height: 1.4;
 }
 h1 {
@@ -147,7 +147,7 @@ header {
     text-align: center;
 }
 
-#Intro, #My_Work, #Get_In_Touch, #About_Me, #Expert {
+#Intro, #My_Work, #Get_In_Touch, #About_Me, #Expert{
     background-color: #d3bdb0;
     padding: 20px 0;
     display: inline-block;
@@ -193,13 +193,13 @@ nav {
 
 .css-box-shadow{
 	/*start ------------*/
-	width: [object Object]px; 
-	height: [object Object]px; 
+	width: 345px; 
+	height: 110px; 
 	background: #d3bdb0; 
 	border: solid #BDBDBD 1px; 
-	box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5)  ; 
-	-webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5)  ; 
-	-moz-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5)  ; 
+	box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5); 
+	-webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5); 
+	-moz-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5); 
 }
 
 main {
