--- a/css/expert/style.css
+++ b/css/expert/style.css
@@ -64,6 +64,8 @@ h4 {
 }
 img {
     width: 100%;
+    max-width: 100%;
+    height: auto;
 }
 a {
     color: #28587b;
@@ -91,7 +93,7 @@ a:hover, a:focus {
     padding: 10px;
     border-radius: 3px;
     border-bottom: 2px solid #000000;
-    transition: 0.2s;
+    transition: 0.2s opacity;
 }
 .button:hover {
     opacity: 0.8;
@@ -133,6 +135,9 @@ header {
 
 .row {
     margin: 25px 0;
+    content: "";
+    clear: both;
+    display: table;
 }
 
 #Intro {
@@ -140,6 +145,10 @@ header {
 }
 
 #About_Me h1 {
+    text-align: center;
+}
+
+#My_Work h2 {
     text-align: center;
 }
 
@@ -151,6 +160,10 @@ header {
     background-color: #d3bdb0;
     padding: 20px 0;
     display: inline-block;
+    width: 100%;
+}
+
+nav {
     width: 100%;
 }
 
@@ -193,15 +206,90 @@ nav {
 
 .css-box-shadow{
 	/*start ------------*/
-	width: 345px; 
+	width: 100%; 
 	height: 110px; 
 	background: #d3bdb0; 
 	border: solid #BDBDBD 1px; 
 	box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5); 
 	-webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5); 
-	-moz-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5); 
+	-moz-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
 }
 
 main {
     padding-top: 133px;
+}
+
+/* ==============================
+Medium devices (640px and larger)
+================================= */
+@media only screen and (min-width: 640px) {
+    header {
+        text-align: unset;
+        padding: 20px 0 13px;
+        width: unset;
+    }
+
+    nav {
+        width: auto;
+        float: right;
+        margin-top: 4px;
+    }
+
+    .col-md-6 {
+        width: 50%;
+    }
+
+    [class*="col-"] {
+        float: left;
+        padding: 10px;
+    }
+
+    #About_Me h3 {
+        margin-top: 0;
+    }
+}
+
+/* ==============================
+Large devices (1024px or larger)
+================================= */
+@media only screen and (min-width: 1024px) {
+    container {
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+/* ==============================
+X-large devices (1440px or larger)
+================================= */
+@media only screen and (min-width: 1440px) {
+}
+
+@keyframes color-change {
+    0% {fill: #edc655;}
+    50% {fill: #fcffad;}
+    100% {fill: #f76414;}
+}
+
+.sun {
+    animation: 4s color-change infinite alternate linear;
+}
+
+@keyframes cloud-move {
+    from {transform: translate(0,50px);}
+    to {transform: translate(200px,50px);}
+}
+
+.cloud-front {
+    animation: 30s cloud-move infinite alternate linear;
+}
+
+@keyframes cloud-move-reverse {
+    from {transform: translate(446px,48px);}
+    to {transform: translate(100px, 48px);}
+}
+
+.cloud-back {
+    animation: 34s cloud-move-reverse infinite alternate linear;
 }
