--- a/css/expert/style.css
+++ b/css/expert/style.css
@@ -115,11 +115,11 @@ a:hover, a:focus {
   }
 header {
     background-color: #d3bdb0;
-    padding: 10px 5px 15px 5px;
+    padding: 10px 0 4px;
     margin: 10px 15px 10px 15px;
     border-bottom: 3px solid #89937c;
-    text-align: center;
     position: fixed;
+    width: auto;
     display: inline-block;
 }
 
@@ -169,15 +169,14 @@ nav {
 
 .logo {
     max-width: 250px;
+    padding: 10px;
 }
+
 
 nav > ul {
     list-style-type: none;
     padding: 0;
-}
-
-nav > ul > li {
-    display: inline-block;
+    margin: 0;
 }
 
 nav > ul > li > a {
@@ -200,14 +199,50 @@ nav > ul > li > a:active {
     text-decoration: underline;
 }
 
+.navtoggle li:not(:last-child) {
+    display: none;
+}
+
+.navtoggle, .navtoggle.responsive {
+    position: relative;
+}
+
+.navtoggle li .icon {
+    position: absolute;
+    right: 0;
+    top: 2px;
+    font-size: 20px;
+    padding-right: 0;
+}
+
+.navtoggle.responsive li  {
+    display: block;
+}
+
+.navtoggle.responsive nav {
+    padding: 24px 0 0;
+}
+
+.navtoggle.responsive li  {
+    display: block;
+    padding: 10px 0;
+    border-top: 1px solid rgba(255,127,80,0.5);
+}
+  
+.navtoggle.responsive li:last-child  {
+    padding: 0 0 10px;
+}
+
 nav {
     display: inline-block;
+    width: 100%;
 }
 
 .css-box-shadow{
 	/*start ------------*/
 	width: 100%; 
-	height: 110px; 
+	height: 110px;
+    position: fixed;
 	background: #d3bdb0; 
 	border: solid #BDBDBD 1px; 
 	box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5); 
@@ -233,6 +268,19 @@ Medium devices (640px and larger)
         width: auto;
         float: right;
         margin-top: 4px;
+        margin: 1em 0;
+    }
+
+    .navtoggle li:not(:last-child) {
+        display: inline-block;
+    }
+
+    .navtoggle li:last-child {
+        display: none;
+    }
+
+    nav > ul > li {
+        min-width: 641px;
     }
 
     .col-md-6 {
